--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  nit_router:
+    path: ../nit_router
+    # git:
+    #   url: git@github.com:novikov-it/nit_router.git
+    #   ref: master
+
   intl: ^0.19.0
   flutter_hooks: ^0.20.1
   hooks_riverpod: ^2.4.10
@@ -21,11 +27,18 @@ dependencies:
   oktoast: ^3.4.0
   firebase_core: ^2.31.1
   firebase_messaging: ^14.9.3
+  serverpod_auth_client: ^2.1.1
+  serverpod_auth_shared_flutter: ^2.1.1
+  freezed_annotation: ^2.4.4
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  freezed: ^2.5.2
+  riverpod_generator: ^2.4.0
+  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
