--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,14 @@ dependencies:
       url: git@github.com:novikov-it/nit_router.git
       ref: master
 
+  serverpod_auth_client: ^2.1.1
+  serverpod_auth_shared_flutter: ^2.1.1
+  serverpod_auth_phone_flutter:
+    git:
+        url: git@github.com:novikov-it/nit_serverpod.git
+        ref: main
+        path: modules/serverpod_auth/serverpod_auth_phone_flutter
+
   intl: ^0.19.0
   flutter_hooks: ^0.20.1
   hooks_riverpod: ^2.4.10
@@ -28,8 +36,7 @@ dependencies:
   oktoast: ^3.4.0
   firebase_core: ^2.31.1
   firebase_messaging: ^14.9.3
-  serverpod_auth_client: ^2.1.1
-  serverpod_auth_shared_flutter: ^2.1.1
+
   freezed_annotation: ^2.4.4
   riverpod_annotation: ^2.3.5
   adaptive_breakpoints: ^0.1.7
