--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   riverpod_annotation: ^2.3.5
   adaptive_breakpoints: ^0.1.7
   gap: ^3.0.1
+  flutter_svg: ^2.0.10+1
+  flutter_riverpod: ^2.5.3
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
