--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
       url: git@github.com:novikov-it/nit_router.git
       ref: master
 
+  serverpod_client: ^2.1.1
+  serverpod_chat_client: ^2.1.1
+  serverpod_chat_flutter: ^2.1.1
   serverpod_auth_client: ^2.1.1
   serverpod_auth_shared_flutter: ^2.1.1
   serverpod_auth_phone_flutter:
@@ -34,8 +37,8 @@ dependencies:
   uni_links: ^0.5.1
   go_router: ^10.1.2
   oktoast: ^3.4.0
-  firebase_core: ^2.31.1
-  firebase_messaging: ^14.9.3
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
 
   freezed_annotation: ^2.4.4
   riverpod_annotation: ^2.3.5
@@ -44,14 +47,36 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_riverpod: ^2.5.3
   collection: ^1.18.0
+  image_picker: ^1.1.2
+  chatview: # ^2.2.0
+    path: ../nit_flutter_chatview
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
   freezed: ^2.5.2
   riverpod_generator: ^2.4.0
   build_runner: ^2.4.11
+
+dependency_overrides:
+  # serverpod_chat_client:
+  #   git:
+  #       url: git@github.com:novikov-it/nit_serverpod.git
+  #       path: modules/serverpod_chat/serverpod_chat_client
+  #       ref: main
+  serverpod_chat_flutter:
+    git:
+        url: git@github.com:novikov-it/nit_serverpod.git
+        path: modules/serverpod_chat/serverpod_chat_flutter
+        ref: main
+  serverpod_auth_client:
+    # path: ../../nit_serverpod/modules/serverpod_auth/serverpod_auth_client
+    git:
+      url: git@github.com:novikov-it/nit_serverpod.git
+      path: modules/serverpod_auth/serverpod_auth_client
+      ref: main
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
