--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,14 @@ dependencies:
   flutter_riverpod: ^2.5.3
   collection: ^1.18.0
   image_picker: ^1.1.2
-  chatview: # ^2.2.0
-    path: ../nit_flutter_chatview
   photo_view: ^0.15.0
+  chatview: # ^2.2.0
+    git:
+      url: git@github.com:novikov-it/nit_flutter_chatview.git
+      ref: main
+    # path: ../nit_flutter_chatview
+
+
 
 dev_dependencies:
   flutter_test:
