--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,16 @@ dependencies:
         ref: main
         path: modules/serverpod_auth/serverpod_auth_phone_flutter
 
+  nit_tools_client:
+    # path: ../nit_serverpod/modules/nit_tools/nit_tools_client
+    git:
+      url: git@github.com:novikov-it/nit_serverpod.git
+      path: modules/nit_tools/nit_tools_client
+      ref: main
+
   intl: ^0.19.0
   flutter_hooks: ^0.20.1
   hooks_riverpod: ^2.4.10
-  uni_links: ^0.5.1
   go_router: ^10.1.2
   oktoast: ^3.4.0
   firebase_core: ^3.6.0
@@ -49,11 +55,12 @@ dependencies:
   collection: ^1.18.0
   image_picker: ^1.1.2
   photo_view: ^0.15.0
-  chatview: # ^2.2.0
-    # path: ../nit_flutter_chatview
-    git:
-      url: git@github.com:novikov-it/nit_flutter_chatview.git
-      ref: main
+  # chatview: # ^2.2.0
+  #   # path: ../nit_flutter_chatview
+  #   git:
+  #     url: git@github.com:novikov-it/nit_flutter_chatview.git
+  #     ref: main
+  app_links: ^6.3.2
 
 
 
