unauthenticated username support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,11 +78,12 @@ dev_dependencies:
   build_runner: ^2.4.11
 
 dependency_overrides:
-  # serverpod_chat_client:
-  #   git:
-  #       url: git@github.com:novikov-it/nit_serverpod.git
-  #       path: modules/serverpod_chat/serverpod_chat_client
-  #       ref: main
+  serverpod_chat_client:
+    # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_client
+    git:
+        url: git@github.com:novikov-it/nit_serverpod.git
+        path: modules/serverpod_chat/serverpod_chat_client
+        ref: main
   serverpod_chat_flutter:
     # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_flutter
     git:
