--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,11 @@ dependencies:
         path: modules/serverpod_auth/serverpod_auth_phone_flutter
 
   nit_tools_client:
-    path: ../nit_tools/nit_tools_client
-    # git:
-    #   url: git@github.com:novikov-it/nit_tools.git
-    #   path: nit_tools_client
-    #   ref: master
+    # path: ../nit_tools/nit_tools_client
+    git:
+      url: git@github.com:novikov-it/nit_tools.git
+      path: nit_tools_client
+      ref: master
 
   nit_riverpod_notifications:
     git:
