--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,14 @@ dependencies:
       path: nit_tools_client
       ref: master
 
-  nit_riverpod_notifications:
-    # path: ../nit_riverpod_notifications
-    git:
-      url: git@github.com:novikov-it/nit_riverpod_notifications.git
-      ref: master
+  nit_ui_kit:
+    path: ../nit_ui_kit
+
+  nit_riverpod_notifications: ^0.0.1
+  #   # path: ../nit_riverpod_notifications
+  #   git:
+  #     url: git@github.com:novikov-it/nit_riverpod_notifications.git
+  #     ref: master
 
   intl: ^0.19.0
   flutter_hooks: ^0.20.1
@@ -57,8 +60,6 @@ dependencies:
 
   freezed_annotation: ^2.4.4
   riverpod_annotation: ^2.3.5
-  adaptive_breakpoints: ^0.1.7
-  gap: ^3.0.1
   flutter_svg: ^2.0.10+1
   flutter_riverpod: ^2.5.3
   collection: ^1.18.0
@@ -71,8 +72,6 @@ dependencies:
   #     ref: main
   app_links: ^6.3.2
   flutter_multi_formatter: ^2.13.0
-  skeletonizer: ^1.4.3
-  conditional_parent_widget: ^0.0.2
 
 dev_dependencies:
   flutter_test:
