--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   nit_ui_kit:
     # path: ../nit_ui_kit
     git:
-      url: git@github.com:novikov-it/nit_ui_kit
+      url: git@github.com:novikov-it/nit_ui_kit.git
       ref: master
 
   nit_riverpod_notifications: ^0.0.1
