--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
       ref: master
 
   nit_ui_kit:
-    path: ../nit_ui_kit
-    # git:
-    #   url: git@github.com:novikov-it/nit_ui_kit.git
-    #   ref: master
+    # path: ../nit_ui_kit
+    git:
+      url: git@github.com:novikov-it/nit_ui_kit.git
+      ref: master
 
   nit_riverpod_notifications: ^0.0.1
   #   # path: ../nit_riverpod_notifications
@@ -91,18 +91,18 @@ dev_dependencies:
   build_runner: ^2.4.11
 
 dependency_overrides:
-  serverpod_chat_client:
-    # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_client
-    git:
-        url: git@github.com:novikov-it/nit_serverpod.git
-        path: modules/serverpod_chat/serverpod_chat_client
-        ref: main
-  serverpod_chat_flutter:
-    # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_flutter
-    git:
-        url: git@github.com:novikov-it/nit_serverpod.git
-        path: modules/serverpod_chat/serverpod_chat_flutter
-        ref: main
+  # serverpod_chat_client:
+  #   # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_client
+  #   git:
+  #       url: git@github.com:novikov-it/nit_serverpod.git
+  #       path: modules/serverpod_chat/serverpod_chat_client
+  #       ref: main
+  # serverpod_chat_flutter:
+  #   # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_flutter
+  #   git:
+  #       url: git@github.com:novikov-it/nit_serverpod.git
+  #       path: modules/serverpod_chat/serverpod_chat_flutter
+  #       ref: main
   serverpod_auth_client:
     # path: ../nit_serverpod/modules/serverpod_auth/serverpod_auth_client
     git:
