--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,10 @@ dependencies:
   #     ref: main
   app_links: ^6.3.2
   flutter_multi_formatter: ^2.13.0
+  heif_converter: ^1.0.1
+  image: ^4.5.4
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
