--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   image: ^4.5.4
   path_provider: ^2.1.5
   path: ^1.9.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
