--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ dependencies:
         ref: main
 
   nit_tools_client:
-    # path: ../nit_tools/nit_tools_client
-    git:
-      url: git@github.com:novikov-it/nit_tools.git
-      path: nit_tools_client
-      ref: master
+    path: ../nit_tools/nit_tools_client
+    # git:
+    #   url: git@github.com:novikov-it/nit_tools.git
+    #   path: nit_tools_client
+    #   ref: master
 
   nit_ui_kit: ^0.1.1
     # path: ../nit_ui_kit
@@ -51,11 +51,11 @@ dependencies:
     #   url: git@github.com:novikov-it/nit_generic_forms.git
     #   ref: master
 
-  chatview: # ^2.2.0
-    # path: ../nit_flutter_chatview
-    git:
-      url: git@github.com:novikov-it/nit_flutter_chatview.git
-      ref: main
+  # chatview: # ^2.2.0
+  #   # path: ../nit_flutter_chatview
+  #   git:
+  #     url: git@github.com:novikov-it/nit_flutter_chatview.git
+  #     ref: main
 
   intl: ^0.19.0
   flutter_hooks: ^0.20.1
@@ -78,6 +78,14 @@ dependencies:
   path: ^1.9.0
   image_picker: ^1.1.2
 
+  #chat
+  visibility_detector: ^0.4.0
+  wechat_assets_picker: ^9.5.0
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.4.1
+  gap: ^3.0.1
+  carousel_slider: ^5.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -87,6 +95,7 @@ dev_dependencies:
   build_runner: ^2.4.11
 
 dependency_overrides:
+
   # serverpod_chat_client:
   #   # path: ../nit_serverpod/modules/serverpod_chat/serverpod_chat_client
   #   git:
