--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,11 @@ dependencies:
         path: modules/serverpod_auth/serverpod_auth_phone_flutter
 
   nit_tools_client:
-    # path: ../nit_tools/nit_tools_client
-    git:
-      url: git@github.com:novikov-it/nit_tools.git
-      path: nit_tools_client
-      ref: chat
+    path: ../nit_tools/nit_tools_client
+    # git:
+    #   url: git@github.com:novikov-it/nit_tools.git
+    #   path: nit_tools_client
+    #   ref: chat
 
   nit_ui_kit: ^0.1.1
     # path: ../nit_ui_kit
@@ -86,6 +86,8 @@ dependencies:
   cached_network_image: ^3.4.1
   gap: ^3.0.1
   carousel_slider: ^5.0.0
+  http: ^1.4.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
