--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   carousel_slider: ^5.0.0
   http: ^1.4.0
   http_parser: ^4.0.2
+  fcm_token_manager: ^0.1.5
 
 dev_dependencies:
   flutter_test:
