--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,10 @@ dependencies:
         path: modules/serverpod_auth/serverpod_auth_phone_flutter
 
   nit_tools_client:
-    # path: ../nit_tools/nit_tools_client
-    git:
-      url: git@github.com:novikov-it/nit_tools.git
-      path: nit_tools_client
+    path: ../nit_tools/nit_tools_client
+    # git:
+    #   url: git@github.com:novikov-it/nit_tools.git
+    #   path: nit_tools_client
 
   nit_ui_kit: ^0.1.1
     # path: ../nit_ui_kit
