--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,9 @@ dependencies:
   http_parser: ^4.0.2
   fcm_token_manager: ^0.1.5
   swipe_to: ^1.0.6
+  # audioplayers: ^6.4.0
+  # waveform_recorder: ^1.6.0
+  audio_waveforms: ^1.3.0
 
 dev_dependencies:
   flutter_test:
