--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
     git:
       url: git@github.com:novikov-it/nit_tools.git
       path: nit_tools_client
-      # ref: chat
+      ref: chat
 
   nit_ui_kit: ^0.1.1
     # path: ../nit_ui_kit
