--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   oktoast: ^3.4.0
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
+  flutter_dotenv: ^5.2.1
+
 
   freezed_annotation: ^2.4.4
   riverpod_annotation: ^2.3.5
