--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,7 +126,7 @@ dependency_overrides:
   serverpod_auth_client:
     # path: ../nit_serverpod/modules/serverpod_auth/serverpod_auth_client
     git:
-      url: git@github.com:novikov-it/nit_serverpod.git
+      url: https://github.com/novikov-it/nit_serverpod.git
       path: modules/serverpod_auth/serverpod_auth_client
 
 # For information on the generic Dart part of this file, see the
