--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   #     url: git@github.com:novikov-it/nit_riverpod_notifications.git
   #     ref: master
 
-  nit_generic_forms: ^0.0.1
+  # nit_generic_forms: ^0.0.1
     # path: ../nit_generic_forms
     # git:
     #   url: git@github.com:novikov-it/nit_generic_forms.git
